# oxtbuild

./: README.md  pyproject.toml
oxtbuild/: app.py  config.py  util.py  xmltools.py
src/: oxtbuild.py  xmltools.py
