[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
dependencies = [
    "lxml",
]
name = "oxtbuild"
dynamic = ["readme", "version"]

[project.scripts]
oxtbuild = "oxtbuild.app:main"

[tool.setuptools]
packages = ["oxtbuild"]

[tool.setuptools.dynamic]
readme = {file = ["README.md"], content-type = "text/plain"}
version = {attr = "oxtbuild.config.VERSION"}
